QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -57,7 +57,8 @@
       "agree": "I agree",
       "changeSB": "Change",
       "accept": "Accept",
-      "refuse": "Refuse"
+      "refuse": "Refuse",
+      "read-more": "Learn more"
     },
     "settings": {
       "activity": {
