--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -57,7 +57,8 @@
       "agree": "Je suis d'accord",
       "changeSB": "Changer",
       "accept": "Accepter",
-      "refuse": "Refuser"
+      "refuse": "Refuser",
+      "read-more": "En savoir plus"
     },
     "settings": {
       "activity": {
