--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -39,7 +39,8 @@
     "pricing": "Pricing",
     "concept": "Concept",
     "contact" : "Contact",
-    "download" : "Download"
+    "download" : "Download",
+    "collaborate" : "Collaborate"
   },
   "modal": {
     "login": {
