QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -40,6 +40,8 @@
     "concept": "Concept",
     "contact" : "Contact",
     "download" : "Download",
+    "collect" : "Collect",
+    "progress" : "Progress",
     "collaborate" : "Collaborate"
   },
   "modal": {
