--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -40,6 +40,8 @@
     "concept": "Le concept",
     "contact" : "Contact",
     "download" : "Téléchargement",
+    "collect" : "Collectez",
+    "progress" : "Progressez",
     "collaborate" : "Collaborez"
   },
   "modal": {
