QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -29,7 +29,7 @@
     "area-3": {
       "item-0": {
         "title": "Téléchargez l'application de collecte de données",
-        "content": "Disponible sur Google Play et bientôt sur l'App Store, Qaobee HB est la solution idéale pour l'analyse des données sportives liées au handball. L'application fonctionne aussi bien sur téléphone que sur tablette."
+        "content": "Disponible sur Google Play et bientôt sur l'App Store, Qaobee HB est la solution idéale pour l'analyse des données sportives liées au handball. L'application fonctionne aussi bien sur smartphone que sur tablette."
       },
       "item-1": {
         "title": "Valorisation des données",
