QHBWEB-20 : Gérer le contenu de la page home

--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -39,9 +39,9 @@
     "pricing": "Tarifs",
     "concept": "Le concept",
     "contact" : "Contact",
-    "download" : "Téléchargement",
+    "download" : "Téléchargez",
     "collect" : "Collectez",
-    "progress" : "Progressez",
+    "progress" : "Analysez",
     "collaborate" : "Collaborez"
   },
   "modal": {
