QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -121,7 +121,7 @@
           "intro": "Téléchargez notre application Qaobee HB sur votre téléphone ou votre tablette et commencez à collecter les actions de jeu de vos joueurs durant les matchs",    
           "detail": {
               "shootTitle": "Tir préférentiel",
-              "shoot": " Identifiez les préférences de tirs de vos joueurs en indiquant l'origine et l'impact de leur tirs <br/>Pour vos gardiens, observez les points forts et leur poins faible en précisant l'origine et l'impact des tirs adverses",
+              "shoot": " Identifiez les préférences de tirs de vos joueurs en indiquant l'origine et l'impact de leur tirs <br/>Pour vos gardiens, observez les points forts et leur points faibles en précisant l'origine et l'impact des tirs adverses",
               "attackTitle": "Performance offensive",
               "attack": "Collectez les actions positives et négatives de vos joueurs lors des phases d'attaque <br/> Décalage, passe décisive, force, marché, reprise, perte de balle...",
               "defenseTitle": "Performance défensive",
